parser/src/parser/expressions/snapshots/tests__parser::expressions::if_expr::tests::parse_empty_if.snap
---
created: "2020-05-06T10:43:12.317262600Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/if_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 23)
  FN_DEF@[0; 23)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 23)
      BLOCK@[10; 23)
        L_CURLY@[10; 11) "{"
        WHITESPACE@[11; 12) " "
        EXPR_STMT@[12; 22)
          IF_EXPR@[12; 22)
            IF_KW@[12; 14) "if"
            WHITESPACE@[14; 15) " "
            CONDITION@[15; 20)
              LITERAL@[15; 19)
                TRUE_KW@[15; 19) "true"
              WHITESPACE@[19; 20) " "
            BLOCK_EXPR@[20; 22)
              BLOCK@[20; 22)
                L_CURLY@[20; 21) "{"
                R_CURLY@[21; 22) "}"
        R_CURLY@[22; 23) "}"

